--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-15 03:15:03
+lastsearch = 2024-07-15 10:33:10
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -50.0%%
-title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/chăn ga gối
+match = -33.3%%
+title = bộ vỏ chăn ga gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga gối
 
 [demxanh.com]
 match = -8.3%%
