--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-15 08:05:00
+lastsearch = 2024-07-15 10:40:17
 
 [changagoidem.co]
 match = 8.3%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối phi lụa thêu chữ H cao cấp -
 url = https://changagoidem.co/sanpham/bo-chan-ga-goi-phi-lua-theu-chu-h-cao-cap/
 
 [shopee.vn]
-match = 2.8%%
-title = Bộ Chăn Ga Gối Phi Lụa Dream CiTY Chăn Hè, Chất Liệu ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Phi-Lụa-Dream-CiTY-Chăn-Hè-Chất-Liệu-Mềm-Mướt-Đơn-Sắc-Set-4-Món-Tiêu-Chuẩn-i.1053999936.24566428759
+match = 8.3%%
+title = chăn ga lụa giá tốt Tháng 5, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn ga lụa&urlold=set-chan-ga-lua-cao-cap/3056220516971415880/343220106741734172/ 
 
 [hethongnemtot.com]
 match = -5.3%%
