--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-15 06:54:08
+lastsearch = 2024-07-15 10:32:23
 
 [silverwow.net]
 match = -255.6%%
@@ -57,9 +57,9 @@ title = Chia Sing Chan
 url = https://scholar.google.com.ph/citations?user=ZTWgOWsAAAAJ&hl=fil
 
 [www.amazon.co.jp]
-match = -88.9%%
-title = New Minimal-chan 3 Doses
-url = https://www.amazon.co.jp/-/en/New-Minimal-chan-3-Doses/dp/B07B35Q473
+match = -488.9%%
+title = Mikawaya Edomae Toro-chan 6.6 lbs (3 kg) (500 g) x 6 Packs ...
+url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B01APABNVO
 
 [unistrutohio.com]
 match = -511.1%%
@@ -97,9 +97,9 @@ title = Cheong Chan Elephant Cooking Caramel Sauce 3kg ...
 url = https://www.supplybunny.com/en/products/cheong-chan-elephant-cooking-caramel-sauce-3kg-bottle-6-bottles-per-carton
 
 [shopee.com.my]
-match = -622.2%%
-title = 3kg 祥珍象标晒油 Cheong Chan Cooking Caramel Dark ...
-url = https://shopee.com.my/3kg-祥珍象标晒油-Cheong-Chan-Cooking-Caramel-Dark-Soy-Sauce-i.121533526.10766512503
+match = -177.8%%
+title = Cheong Chan Cooking Caramel : 3kg
+url = https://shopee.com.my/Cheong-Chan-Cooking-Caramel-3kg-i.451025624.5793405457
 
 [www.ttbsupplies.com]
 match = -422.2%%
