--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-15 09:09:56
+lastsearch = 2024-07-15 10:40:57
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -32,9 +32,9 @@ title = Willamette Meteorite
 url = https://en.wikipedia.org/wiki/Willamette_Meteorite
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = 0.0%%
+title = Sylvia Gani
+url = https://www.facebook.com/sylviagani/
 
 [www.youtube.com]
 match = -323.1%%
