--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-15 10:20:13
+lastsearch = 2024-07-15 10:36:36
 
 [demtot.com]
-match = 42.9%%
-title = Đệm lò xo túi Adaptive
-url = https://demtot.com/dem-lo-xo-tui-adaptive/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
