--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 10:49:44
+lastsearch = 2024-07-15 12:47:36
 
 [www.tiktok.com]
 match = -40.0%%
@@ -68,8 +68,8 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
 match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmOvx_5I&sig=ACfU3U17LFleCxNmsi_o3zUBDzjZSnCMDQ&hl=en&sa=X&ved=2ahUKEwiZy5D1kaiHAxVAv4kEHfx5DEkQ6AF6BAgWEAM
+title = The New Encyclopaedia, Or, Universal Dictionary of Arts and ...
+url = https://books.google.com/books?id=iY96V3IirecC&pg=PA294&lpg=PA294&dq=man+in+hoa+dep+16&source=bl&ots=O2FsgHkRWn&sig=ACfU3U2zwLb-ZX57kMqI2sL2YnpsnD5vTA&hl=en&sa=X&ved=2ahUKEwjClpuhrKiHAxWBhu4BHXV3D7AQ6AF6BAgVEAM
 
 [tax.vermont.gov]
 match = -29.4%%
