--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-15 11:35:17
+lastsearch = 2024-07-15 12:46:06
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,19 +17,19 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -94.4%%
-title = Nguoi Viet Colorado | ♻NEM CUA BỂ - HẢI PHÒNG
-url = https://m.facebook.com/groups/213134222458659/posts/1917038362068228/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -83.3%%
-title = Hội người việt ở Kimhe (김해) | 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀
-url = https://www.facebook.com/groups/2515164205371847/posts/𝐍𝐄𝐌-𝐂𝐇𝐔𝐀-𝐕𝐈𝐄̂𝐍-𝐌𝐈𝐍𝐈-𝐎̛́𝐓-𝐗𝐈𝐄̂𝐌-𝐗𝐀𝐍𝐇-14k-500gr-nem-ngon-kèm-ớt-xiêm-xanh-cực-kì-t/3776357239252531/
+match = -127.8%%
+title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
+url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
 
 [eva.vn]
 match = -150.0%%
