--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-15 09:55:18
+lastsearch = 2024-07-15 12:45:10
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.1%%
+title = ADDITIONAL CASE INFORMATION
+url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
 match = -7.7%%
@@ -27,9 +27,9 @@ title = Li Zhang, PhD
 url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -157.9%%
-title = Amplification-free detection of SARS-CoV-2 with CRISPR ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7834310/
+match = -168.4%%
+title = Review of influenza-associated pulmonary aspergillosis in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -52,9 +52,9 @@ title = Publications – Choi, Kup Sze Thomas
 url = https://www.techcosmos.com.hk/thomas/publications/
 
 [www2.ed.gov]
-match = -136.8%%
-title = Candidates for the U.S. Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2022/candidates.pdf
+match = -126.3%%
+title = Candidates for the US Presidential Scholars Program
+url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
