--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 12:47:36
+lastsearch = 2024-07-15 16:31:26
 
 [www.tiktok.com]
 match = -40.0%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The New Encyclopaedia, Or, Universal Dictionary of Arts and ...
-url = https://books.google.com/books?id=iY96V3IirecC&pg=PA294&lpg=PA294&dq=man+in+hoa+dep+16&source=bl&ots=O2FsgHkRWn&sig=ACfU3U2zwLb-ZX57kMqI2sL2YnpsnD5vTA&hl=en&sa=X&ved=2ahUKEwjClpuhrKiHAxWBhu4BHXV3D7AQ6AF6BAgVEAM
+match = -182.4%%
+title = Department of State Publication: Department and Foreign ...
+url = https://books.google.com/books?id=fqjlLd9U4NMC&pg=PA193&lpg=PA193&dq=man+in+hoa+dep+16&source=bl&ots=8kgVWwho5E&sig=ACfU3U3rctlXvYUSlv6e9QfVlpNdCs-6FA&hl=en&sa=X&ved=2ahUKEwj7kq-l3qiHAxUCFlkFHR5fBkwQ6AF6BAgmEAM
 
 [tax.vermont.gov]
 match = -29.4%%
