--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-15 12:45:10
+lastsearch = 2024-07-15 16:30:36
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -21.1%%
-title = ADDITIONAL CASE INFORMATION
-url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
 match = -7.7%%
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
@@ -330,4 +330,9 @@ url = https://www.instagram.com/p/C6SFe02u4bb/
 match = 0.0%%
 title = Katie Pollard, PhD
 url = https://gladstone.org/people/katie-pollard
+
+[www.nature.com]
+match = -205.3%%
+title = Effects of high-intensity interval training on cardiometabolic ...
+url = https://www.nature.com/articles/s41391-024-00867-3
 
