--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-15 13:47:51
+lastsearch = 2024-07-15 17:16:24
 
 [demxanh.com]
 match = 26.1%%
@@ -22,9 +22,9 @@ title = Điệp Xuân Chăn KQ không sóng 5kg
 url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
-match = 39.1%%
-title = Chăn măng lông KQ loại 7kg
-url = https://thegioidemonline.com/chan-bang-long-loai-7kg.html
+match = 45.0%%
+title = Chăn lông KQ cao cấp
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -87.0%%
@@ -195,4 +195,9 @@ url = https://www.chotot.com/mua-ban-ga-choi-sdcp6
 match = 4.3%%
 title = Tin tức SỨC KHỎE mới nhất 24h
 url = https://laodong.vn/suc-khoe?page=1674
+
+[m.facebook.com]
+match = -87.0%%
+title = Showbeat - ‼️ Hái Thứ Hiêu bỗng bị réo tên sau tập 5 ...
+url = https://m.facebook.com/tcsbvn/photos/️-hái-thứ-hiêu-bỗng-bị-réo-tên-sau-tập-5-của-anh-trai-say-hi-️giang-cư-mận-bất-b/1019598589552960/
 
