--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-15 13:45:05
+lastsearch = 2024-07-15 17:15:23
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -232,8 +232,8 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -273.3%%
-title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ sữa và ...
+match = -226.7%%
+title = The B6 Hà Nội - Đồ Hàn | Lạc vào bếp bánh thơm mùi bơ ...
 url = https://www.instagram.com/p/CFD27fHldDQ/
 
 [luatvietnam.vn]
@@ -337,8 +337,8 @@ title = ĐẠI LÝ GIAO NƯỚC TẬN NHÀ QUẬN BÌNH THẠNH, LAVIE ...
 url = https://iwater.vn/tin-thi-truong/iwater-dai-ly-giao-nuoc-tan-nha-khach-hang-thuoc-du-an-la-bonita-so-6-8-duong-d2-phuong-15-quan-binh-thanh-tphcm-13453.html
 
 [www.axel-gl.com]
-match = -240.0%%
-title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 cách ...
+match = -206.7%%
+title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 ...
 url = https://www.axel-gl.com/vi-vn/asone/d/64-2588-77/
 
 [thtanthanh.phubinh.edu.vn]
