--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-15 12:50:19
+lastsearch = 2024-07-15 17:20:33
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Toàn cảnh Quốc tế 14/7: F-16 bắt đầu xuất kích ở Ukrain
 url = https://www.youtube.com/watch?v=Hni1WRoCH2M
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaaHV5jz8&sig=ACfU3U27MmZ6699sT6bJulurOqh1Q0FlFQ&hl=en&sa=X&ved=2ahUKEwiF-pWkwKeHAxVRL1kFHXX2BVEQ6AF6BAgdEAM
+match = -131.2%%
+title = 5000 bài viết chuyên mục Tâm sự trên VnExpress
+url = https://books.google.com/books?id=-TLoEAAAQBAJ&pg=PT11180&lpg=PT11180&dq=chieu+lac+soc+16&source=bl&ots=1ao5nTqY3o&sig=ACfU3U1DYtzsDQDOyKpIh-K9JV0MXH48Eg&hl=en&sa=X&ved=2ahUKEwjAtLii6aiHAxUSFFkFHXCKBvIQ6AF6BAgbEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
