--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-15 14:48:58
+lastsearch = 2024-07-15 17:14:31
 
 [en.wikipedia.org]
 match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = THE PRESIDENT'S DAILY BRIEF 13 AUGUST 1974 - FOIA
 url = https://www.cia.gov/readingroom/document/0006007790
 
 [8tharmy.korea.army.mil]
-match = -108.7%%
-title = The Official Home Page of the Korean Service Corps Battalion
-url = https://8tharmy.korea.army.mil/ksc/
+match = -39.1%%
+title = The Official Home Page of the Eighth Army
+url = https://8tharmy.korea.army.mil/site/index.asp
 
 [ourworldindata.org]
 match = -91.3%%
