--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-15 09:13:45
+lastsearch = 2024-07-15 17:21:47
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -33.3%%
+title = Holiday Types 2024/25
+url = https://www.tui.co.uk/holidays
 
 [uk.trip.com]
 match = -233.3%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -208.3%%
-title = TUI Fly Belgium 737 flying in North America?
+match = -333.3%%
+title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
 url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
