--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-15 17:22:05
+lastsearch = 2024-07-15 18:11:39
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
@@ -335,4 +335,9 @@ url = https://xoilaczqq.tv/
 match = -206.7%%
 title = danh sách điểm tiêm vắc-xin phòng covid-19 ngày 22/3/2023
 url = https://hcdc.vn/hoidap/index/chitiet/b5f73d288ea96f141a64c180a6ed9be3
+
+[tuyensinh247.com]
+match = -240.0%%
+title = Một con lắc lò xo thẳng đứng gồm vật nặng khối lượng m ...
+url = https://tuyensinh247.com/bai-tap-87566.html
 
