--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-15 17:21:36
+lastsearch = 2024-07-15 18:11:28
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -156.2%%
-title = Khám phá Nhà ga cổ đẹp nhất Việt Nam và Đông Dương
-url = https://www.youtube.com/watch?v=V5wV5DuCJI8
+match = -150.0%%
+title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
+url = https://www.youtube.com/watch?v=6598XYpaW3E
 
 [hawater.com.vn]
 match = -75.0%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -125.0%%
+title = mega88 slot game–Apps on Google Play964.91.4
+url = https://sv.ut.edu.vn/newscowtl1.html
 
 [yamaha-motor.com.vn]
 match = -43.8%%
