--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-15 16:17:28
+lastsearch = 2024-07-15 18:26:54
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -132,9 +132,9 @@ title = Thực phẩm bảo vệ sức khỏe Vitamin B Mix DHC | healthyct.vn
 url = https://healthyct.vn/san-pham/vitamin-b-mix-dhc/
 
 [www.tiktok.com]
-match = -316.7%%
-title = Gonche
-url = https://www.tiktok.com/discover/Gonche
+match = -57.1%%
+title = Tức ak, thoa kem cho cố buổi sáng táp táp giùm em kem ...
+url = https://www.tiktok.com/@chanhbeauty93/video/7237827360110726406
 
 [www.scribd.com]
 match = -10.7%%
@@ -190,4 +190,9 @@ url = https://kinhtexaydung.gov.vn/wp-content/uploads/2023/05/CBG-Thang-10-nam-2
 match = -32.1%%
 title = CÂY MẬT NHÂN, CÂY BÁ BỆNH HAY SÂM TONGCAT ALI ...
 url = http://thienphuoc.com/shop_news.php?l=vn&ac=13&mode=n&cn=359&n=7481&item=4
+
+[hoavouu.com]
+match = -39.3%%
+title = Thư Mời Tiệc Chay Văn Nghệ Gây Quỹ Tu Bổ Chùa Phật Đà
+url = https://hoavouu.com/p14a43298/6/thu-moi-tiec-chay-van-nghe-gay-quy-tu-bo-chua-phat-da
 
